RESOLVED FIXED 258391
REGRESSION(264920@main): TestWebKitAPI.ApplicationStateTracking.WindowDeallocDoesNotPermanentlyFreezeLayerTree is a constant timeout -- fix
https://bugs.webkit.org/show_bug.cgi?id=258391
Summary REGRESSION(264920@main): TestWebKitAPI.ApplicationStateTracking.WindowDealloc...
Gerald Squelart
Reported 2023-06-22 01:40:52 PDT
<rdar://110536156> Follow-up to bug 257897 that disabled the test, this is to fix the actual bug and re-enable the test.
Attachments
Gerald Squelart
Comment 1 2023-06-22 04:32:00 PDT
EWS
Comment 2 2023-06-28 22:08:32 PDT
Committed 265611@main (dcb5bdf28a06): <https://commits.webkit.org/265611@main> Reviewed commits have been landed. Closing PR #15131 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.